# encoding_prompter

./: .coverage  README.md  pyproject.toml
encoding_prompter/: __init__.py  codebook.py  document.py  encoder.py  llm_client.py  parser.py  prompts.py
examples/: example_codebook.json  psychedelic_codebook.json  usage_example.ipynb
examples/example_directory/: s29_integration1.txt  s29_integration2.txt  s7_integration1.txt
tests/: __init__.py  test_codebook.py  test_document.py  test_parser.py
